--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,13 @@ services:
     ports:
       - 9000:9000
 
-  jenkins:
-    image: jenkins/jenkins
-    container_name: jenkins-container
-    ports:
-      - 8082:8080
-    volumes:
-      - jenkins_home:/var/jenkins_home
+  # jenkins:
+  #   image: jenkins/jenkins
+  #   container_name: jenkins-container
+  #   ports:
+  #     - 8082:8080
+  #   volumes:
+  #     - jenkins_home:/var/jenkins_home
 
   nexus:
     image: sonatype/nexus3
@@ -23,5 +23,5 @@ services:
     environment:
       - MAX_HEAP=768m
 
-volumes:
-  jenkins_home:
+# volumes:
+#   jenkins_home:
